Keep the footer at the bottom but prevent it from overlapping content

--- a/app/src/App.css
+++ b/app/src/App.css
@@ -1,4 +1,20 @@
-body { }
+/* Sticky footer via https://stackoverflow.com/a/27864663 */
+
+html {
+  position: relative;
+  min-height: 100%;
+}
+
+body {
+  margin-bottom: 130px; /* Margin bottom by footer height */
+}
+
+.footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 120px; /* Set the fixed height of the footer here */
+}
 
 .App { }
 
